@@ -103,7 +103,7 @@ void sp_file_save (GtkWidget * widget)
 	/* fixme: */
 	repr = SP_OBJECT (doc->root)->repr;
 
-	fn = sp_repr_attr (repr, "docname");
+	fn = sp_repr_attr (repr, "sodipodi:docname");
 	if (fn == NULL) {
 		sp_file_save_as (widget);
 	} else {
@@ -132,8 +132,8 @@ file_save_ok (GtkWidget * widget, GtkFileSelection * fs)
 	save_path = g_dirname (filename);
 	if (save_path) save_path = g_strconcat (save_path, "/", NULL);
 
-	sp_repr_set_attr (repr, "docbase", save_path);
-	sp_repr_set_attr (repr, "docname", filename);
+	sp_repr_set_attr (repr, "sodipodi:docbase", save_path);
+	sp_repr_set_attr (repr, "sodipodi:docname", filename);
 
 	sp_repr_save_file (repr, filename);
 #if 0
@@ -185,7 +185,7 @@ file_import_ok (GtkWidget * widget, GtkFileSelection * fs)
 	doc = SP_ACTIVE_DOCUMENT;
 	rdoc = SP_OBJECT (doc->root)->repr;
 
-	docbase = sp_repr_attr (rdoc, "SP-DOCBASE");
+	docbase = sp_repr_attr (rdoc, "sodipodi:docbase");
 	relname = sp_relative_path_from_path (filename, docbase);
 	/* fixme: this should be implemented with mime types */
 	e = sp_extension_from_path (filename);
@@ -211,7 +211,7 @@ file_import_ok (GtkWidget * widget, GtkFileSelection * fs)
 	    (strcmp (e, "xpm") == 0)) {
 		repr = sp_repr_new ("image");
 		sp_repr_set_attr (repr, "src", relname);
-		sp_repr_set_attr (repr, "absref", filename);
+		sp_repr_set_attr (repr, "sodipodi:absref", filename);
 		sp_document_add_repr (doc, repr);
 		sp_repr_unref (repr);
 		sp_document_done (doc);
