@@ -196,6 +196,8 @@ sp_repr_remove_signals (SPRepr * repr)
 {
 	g_assert (repr != NULL);
 
+	g_warning ("need to remove signal handlers by hand");
+#if 0
 	sp_repr_set_signal (repr, "destroy", NULL, NULL);
 	sp_repr_set_signal (repr, "child_added", NULL, NULL);
 	sp_repr_set_signal (repr, "child_removed", NULL, NULL);
@@ -204,6 +206,7 @@ sp_repr_remove_signals (SPRepr * repr)
 	sp_repr_set_signal (repr, "content_changed_pre", NULL, NULL);
 	sp_repr_set_signal (repr, "content_changed", NULL, NULL);
 	sp_repr_set_signal (repr, "order_changed", NULL, NULL);
+#endif
 }
 
 const gchar *
