@@ -1,5 +1,10 @@
 2000-04-29  Lauris Kaplinski  <lauris@ariman.ee>
 
+	* xml/repr.*: Reprs are now GtkObjects
+	* xml/repr-io.c: Preliminary namespacing (xmlns:sodipodi)
+
+2000-04-29  Lauris Kaplinski  <lauris@ariman.ee>
+
 	* src/dialogs/xml-tree.c (sp_xml_tree_change_attribute_long):
 	new function to change long attribute (GtkEntry does not like
 	long strings). Also attribute changing in xml pushes Undo stack.
